code25_all/ruby/2134702.txt
irb> { a:  2 }
=> {:a=>2}

irb> { a-b:  2 }
SyntaxError: (irb):5: syntax error, unexpected tLABEL
{ a-b:  2 }
      ^

irb> { :"a-b" =>  2 }
=> {:"a-b"=>2}

